package CD.Impl.ScooterRental.users;

public class Cliente extends User{
    @Override
    public void login() {

    }

    @Override
    public void logout() {

    }
}
