package CD.Impl.ScooterRental.users;

public abstract class User {

    public abstract void login();

    public abstract void logout();
}
